--- a/index.html
+++ b/index.html
@@ -61,51 +61,63 @@
             <div class="container">
                 <div class="row">
                     <div class="service__title--wrapper">
-                        <h5><span class="purple">Features</span></h5>
-                        <h2>We have Amazing <span class="purple">Service</span></h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quidem error odio tempora reiciendis tempore modi delectus minima. Reiciendis!</p>
+                        <h5>FEATURES</h5>
+                        <h2 class="service__subtitle">We have Amazing <span class="purple">Service</span></h2>
+                        <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quidem error odio tempora reiciendis tempore modi delectus minima. Reiciendis!</p>
                     </div> 
                     <div class="services">
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-lock"></i></i></span>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-lock"></i></i></span>
+                            </figure>
                             <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <h3 class="service__description--title">Secure</h3>
+                                <p class="service__description--para">We strictly only deal with vendors that provide top notch security.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-headset"></i></span>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-headset"></i></span>
+                            </figure>
                             <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <h3 class="service__description--title">24/7 Support</h3>
+                                <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-sliders"></i></span>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-sliders"></i></span>
+                            </figure>
                             <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <h3 class="service__description--title">Customizable</h3>
+                                <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-arrows-rotate"></i></span>
-                            <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-arrows-rotate"></i></span>
+                            </figure>
+                                <div class="service__description">
+                                <h3 class="service__description--title">Reliable</h3>
+                                <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-bolt-lightning"></i></span>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-bolt-lightning"></i></span>
+                            </figure>
                             <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <h3 class="service__description--title">Fast</h3>
+                                <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         <div class="service">
-                            <span class="purple"><i class="fa-solid fa-user-check"></i></span>
+                            <figure class="service__icon">
+                                <span class="purple"><i class="fa-solid fa-user-check"></i></span>
+                            </figure>
                             <div class="service__description">
-                                <h3>Secure</h3>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <h3 class="service__description--title">Easy</h3>
+                                <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         </div>
