--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
     
     <main>
-        <section id="service">
+        <section id="features">
             <div class="container">
                 <div class="row">
                     <div class="service__title--wrapper">
@@ -68,7 +68,7 @@
                     <div class="services">
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-lock"></i></i></span>
+                                <i class="fa-solid fa-lock"></i></i>
                             </figure>
                             <div class="service__description">
                                 <h3 class="service__description--title">Secure</h3>
@@ -77,7 +77,7 @@
                         </div>
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-headset"></i></span>
+                                <i class="fa-solid fa-headset"></i>
                             </figure>
                             <div class="service__description">
                                 <h3 class="service__description--title">24/7 Support</h3>
@@ -86,8 +86,8 @@
                         </div>
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-sliders"></i></span>
-                            </figure>
+                                <i class="fa-solid fa-sliders"></i>
+                            </figure>    
                             <div class="service__description">
                                 <h3 class="service__description--title">Customizable</h3>
                                 <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
@@ -95,17 +95,17 @@
                         </div>
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-arrows-rotate"></i></span>
-                            </figure>
-                                <div class="service__description">
+                                <i class="fa-solid fa-arrows-rotate"></i>
+                            </figure>    
+                            <div class="service__description">
                                 <h3 class="service__description--title">Reliable</h3>
                                 <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
                             </div>
                         </div>
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-bolt-lightning"></i></span>
-                            </figure>
+                                <i class="fa-solid fa-bolt-lightning"></i>
+                            </figure>    
                             <div class="service__description">
                                 <h3 class="service__description--title">Fast</h3>
                                 <p class="service__description--para">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo repellendus accusantium quidem!</p>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="service">
                             <figure class="service__icon">
-                                <span class="purple"><i class="fa-solid fa-user-check"></i></span>
+                                <i class="fa-solid fa-user-check"></i>
                             </figure>
                             <div class="service__description">
                                 <h3 class="service__description--title">Easy</h3>
@@ -124,6 +124,77 @@
                     </div>
                 </div>
             </div>
+            </section>
+            <section class="quality__work">
+                <div class="container">
+                    <div class="row">
+                        <div class="quality__wrapper">
+                            <div class="quality__description">
+                                <h5>QUALITY WORK</h5>
+                                <h2 class="quality__subtitle">Designed & Developed by <span class="purple">Professionals.</span></h2>
+                                <p class="quality__para">
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos impedit explicabo quam corrupti, rerum veniam recusandae sit dolorum quas. Illo, vel id! Dolore quas molestiae reprehenderit consequatur possimus odit soluta.
+                                </p>
+                                <button class="quality__btn">Learn More</button>
+                            </div>
+                            <figure class="quality__img">
+                                <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-1.40a097b525c2f8c9808e.png" alt="Quality Work img">
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="steps">
+                <div class="container">
+                    <div class="row">
+                        <div class="steps__wrapper">
+                            <figure class="steps__img">
+                                <img src="https://treact.owaiskhan.me/static/media/hero-screenshot-2.241aac1fbc66db29d873.png" alt="Steps img">
+                            </figure>
+                            <div class="steps__description">
+                                <h5>STEPS</h5>
+                                <h2 class="steps__subtitle">Easy to <span class="purple">Get Started.</span></h2>
+                                <ul class="steps__list">
+                                    <li class="step">
+                                        <div class="step__num">
+                                            01
+                                        </div>
+                                        <div class="step__text">
+                                            <h6>Register</h6>
+                                            <p class="step__para">Create an account with us using Google or Facebook.</p>
+                                        </div>
+                                    </li>
+                                    <li class="step">
+                                        <div class="step__num">
+                                            02
+                                        </div>
+                                        <div class="step__text">
+                                            <h6>Download</h6>
+                                            <p class="step__para">Browse an Download the template that you like from the marketplace.</p>
+                                        </div>
+                                    </li>
+                                    <li class="step">
+                                        <div class="step__num">
+                                            03
+                                        </div>
+                                        <div class="step__text">
+                                            <h6>Run</h6>
+                                            <p class="step__para">Follow the instructions to setup and customize the template to your needs.</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="values">
+                <div class="container">
+                    <div class="row">
+                        
+                    </div>
+                </div>
             </section>
     </main>
   </body>
