formatting the pricing

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     src="https://treact.owaiskhan.me/static/media/logo.2c489fc453a1783cbadacf914efa3df6.svg"
                     alt="Treact logo"
                     />
-                    <h2 class="logo__title">Treact</h2>
+                    Treact
                 </a>
                 <ul class="nav__links">
                     <li><a class="nav__link" href="#">About</a></li>
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="service__title--wrapper">
                         <h5>FEATURES</h5>
-                        <h2 class="service__subtitle">We have Amazing <span class="purple">Service</span></h2>
+                        <h2>We have Amazing <span class="purple">Service</span></h2>
                         <p class="service__para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit quidem error odio tempora reiciendis tempore modi delectus minima. Reiciendis!</p>
                     </div> 
                     <div class="services">
@@ -131,7 +131,7 @@
                         <div class="quality__wrapper">
                             <div class="quality__description">
                                 <h5>QUALITY WORK</h5>
-                                <h2 class="quality__subtitle">Designed & Developed by <span class="purple">Professionals.</span></h2>
+                                <h2>Designed & Developed by <span class="purple">Professionals.</span></h2>
                                 <p class="quality__para">
                                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos impedit explicabo quam corrupti, rerum veniam recusandae sit dolorum quas. Illo, vel id! Dolore quas molestiae reprehenderit consequatur possimus odit soluta.
                                 </p>
@@ -153,7 +153,7 @@
                             </figure>
                             <div class="steps__description">
                                 <h5>STEPS</h5>
-                                <h2 class="steps__subtitle">Easy to <span class="purple">Get Started.</span></h2>
+                                <h2>Easy to <span class="purple">Get Started.</span></h2>
                                 <ul class="steps__list">
                                     <li class="step">
                                         <div class="step__num">
@@ -192,7 +192,99 @@
             <section id="values">
                 <div class="container">
                     <div class="row">
-                        
+                        <div class="values__wrapper">
+                            <div class="values__description">
+                                <h5>VALUES</h5>
+                                <h2>We Always Abide by Our <span class="purple">Principles.</span></h2>
+                                <p class="values__para">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit pariatur neque placeat quod. Hic laborum itaque, architecto accusantium deserunt quo eveniet possimus ab.
+                                </p>
+                                <div class="values">
+                                    <div class="affordable__value">
+                                        <div class="affordable__title">
+                                            <figure class="affordable__sign">
+                                                <i class="fa-solid fa-dollar-sign"></i>
+                                            </figure>
+                                            <h6 class="affordable__subtitle">Affordable</h6>
+                                        </div>
+                                        <p class="affordable__para">We promise to offer you the best rate we can - at par with the industry standard</p>
+                                    </div>
+                                    <div class="professionalism__value">
+                                        <div class="professionalism__title">
+                                            <figure class="professionalism__sign">
+                                                <i class="fa-solid fa-suitcase"></i>
+                                            </figure>
+                                            <h6 class="professionalism__subtitle">Professionalism</h6>
+                                        </div>
+                                        <p class="professionalism__para">We assure you that our templates are designed and created by professional designers.</p>
+                                    </div>
+                                </div>
+                                <button class="values__btn">Learn More</button>
+                            </div>
+                            <figure class="values__img">
+                                <img src="https://treact.owaiskhan.me/static/media/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                            </figure>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="prices">
+                <div class="container">
+                    <div class="row">
+                        <div class="prices__title--wrapper">
+                            <h5>PRICING</h5>
+                            <h2>Reasonable & Flexible <span class="purple">Plans.</span></h2>
+                            <p class="prices__para">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam sapiente tenetur consectetur? Qui autem laudantium natus.</p>
+                        </div>
+                        <div class="plans">
+                            <div class="plan">
+                                <div class="personal__border--color"></div>
+                                <div class="plan__title--wrapper">
+                                    <h4>PERSONAL</h4>
+                                    <h3 class="plan__price">$17.99</h3>
+                                    <div class="price__duration">MONTHLY</div>
+                                </div>
+                                <div class="plan__features">
+                                    <h4>For Individuals</h4>
+                                    <div class="feature">30 Templates</div>
+                                    <div class="feature">7 Landing Pages</div>    
+                                    <div class="feature">12 Internal Pages</div>
+                                    <div class="feature">Basic Assistance</div>
+                                </div>
+                                <button class="personal__btn">BUY NOW</button>
+                            </div>
+                            <div class="plan business__primary">
+                                <div class="plan__title--wrapper">
+                                    <h4 class="plan__title">BUSINESS</h4>
+                                    <h3 class="plan__price">$37.99</h3>
+                                    <div class="price__duration">MONTHLY</div>
+                                </div>
+                                <div class="plan__features">
+                                    <h4>For Individuals</h4>
+                                    <div class="feature">30 Templates</div>
+                                    <div class="feature">7 Landing Pages</div>    
+                                    <div class="feature">12 Internal Pages</div>
+                                    <div class="feature">Basic Assistance</div>
+                                </div>
+                                <button class="business__btn">BUY NOW</button>
+                            </div>
+                            <div class="plan">
+                                <div class="enterprise__border--color"></div>
+                                <div class="plan__title--wrapper">
+                                    <h4>PERSONAL</h4>
+                                    <h3 class="plan__price">$17.99</h3>
+                                    <div class="price__duration">MONTHLY</div>
+                                </div>
+                                <div class="plan__features">
+                                    <h4>For Individuals</h4>
+                                    <div class="feature">30 Templates</div>
+                                    <div class="feature">7 Landing Pages</div>    
+                                    <div class="feature">12 Internal Pages</div>
+                                    <div class="feature">Basic Assistance</div>
+                                </div>
+                                <button class="enterprise__btn">BUY NOW</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
