--- a/index.html
+++ b/index.html
@@ -251,40 +251,53 @@
                                     <div class="feature">12 Internal Pages</div>
                                     <div class="feature">Basic Assistance</div>
                                 </div>
-                                <button class="personal__btn">BUY NOW</button>
+                                <div class="btn__container">
+                                    <button class="personal__btn">BUY NOW</button>
+                                </div>
                             </div>
                             <div class="plan business__primary">
-                                <div class="plan__title--wrapper">
+                                <div class="plan__title--business">
                                     <h4 class="plan__title">BUSINESS</h4>
                                     <h3 class="plan__price">$37.99</h3>
                                     <div class="price__duration">MONTHLY</div>
                                 </div>
-                                <div class="plan__features">
-                                    <h4>For Individuals</h4>
-                                    <div class="feature">30 Templates</div>
-                                    <div class="feature">7 Landing Pages</div>    
-                                    <div class="feature">12 Internal Pages</div>
-                                    <div class="feature">Basic Assistance</div>
+                                <div class="plan__features--business">
+                                    <h4>For Small Businesses</h4>
+                                    <div class="business__feature">60 Templates</div>
+                                    <div class="business__feature">15 Landing Pages</div>    
+                                    <div class="business__feature">22 Internal Pages</div>
+                                    <div class="business__feature">Priority Assistance</div>
                                 </div>
-                                <button class="business__btn">BUY NOW</button>
+                                <div class="btn__container">
+                                    <button class="business__btn">BUY NOW</button>
+                                </div>
                             </div>
                             <div class="plan">
                                 <div class="enterprise__border--color"></div>
                                 <div class="plan__title--wrapper">
-                                    <h4>PERSONAL</h4>
-                                    <h3 class="plan__price">$17.99</h3>
+                                    <h4>ENTERPRISE</h4>
+                                    <h3 class="plan__price">$57.99</h3>
                                     <div class="price__duration">MONTHLY</div>
                                 </div>
                                 <div class="plan__features">
-                                    <h4>For Individuals</h4>
-                                    <div class="feature">30 Templates</div>
-                                    <div class="feature">7 Landing Pages</div>    
-                                    <div class="feature">12 Internal Pages</div>
-                                    <div class="feature">Basic Assistance</div>
+                                    <h4>For Large Companies</h4>
+                                    <div class="feature">90 Templates</div>
+                                    <div class="feature">27 Landing Pages</div>    
+                                    <div class="feature">37 Internal Pages</div>
+                                    <div class="feature">Personal Assistance</div>
                                 </div>
-                                <button class="enterprise__btn">BUY NOW</button>
+                                <div class="btn__container">
+                                    <button class="enterprise__btn">BUY NOW</button>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section id="testimonials">
+                <div class="container">
+                    <div class="row">
+
                     </div>
                 </div>
             </section>
