Finish formatting the page for regular desktop

--- a/index.html
+++ b/index.html
@@ -297,10 +297,137 @@
             <section id="testimonials">
                 <div class="container">
                     <div class="row">
-
+                        <div class="testimonials__container">
+                            <figure class="testimonials__img">
+                                <img src="https://treact.owaiskhan.me/static/media/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg" alt="">
+                            </figure>
+                            <div class="testimonials__wrapper">
+                                <div class="testimonials__title">
+                                    <h5>TESTIMONIALS</h5>
+                                    <h2>Our Clients <span class="purple">Love Us.</span></h2>
+                                    <p class="testimonials__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure facere illo id architecto at sunt?</p>
+                                </div>
+                                <div class="testimonials__review">
+                                    <div class="five__stars">
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                        <i class="fa-solid fa-star"></i>
+                                    </div>
+                                    <div class="testimonials__subtitle">
+                                        Amazing User Experience
+                                    </div>
+                                    <div class="testimonials__para">
+                                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis error, esse dolore dignissimos quibusdam magnam et nemo animi laudantium iusto mollitia cupiditate dolores? Sint suscipit consequuntur aspernatur voluptatem, provident rem?
+                                    </div>
+                                    <div class="testimonials__authors">
+                                        <div class="author__container">
+                                            <figure class="author__img">
+                                                <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=3.25&w=512&h=512&q=80" alt="">
+                                            </figure>
+                                            <div class="author__bio">
+                                                <p class="author__name">Charlotte Hale</p>
+                                                <p class="author__credentials">Director, Delos Inc.</p>
+                                            </div>
+                                        </div>
+                                        <div class="testimonials__btn--container">
+                                            <button class="testimonials__btn">
+                                                <i class="fa-solid fa-arrow-left"></i>
+                                            </button>
+                                            <div class="divider"></div>
+                                            <button class="testimonials__btn">
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
+            <section id="get__started">
+                <div class="container">
+                    <div class="row">
+                        <div class="purple__box--container">
+                            <div class="get__started--description">
+                                <p class="get__started--para">
+                                    Developers all over the world are happily using Treact.
+                                </p>
+                                <div class="btn__wrapper">
+                                    <button class="get__started--btn">Get Started</button>
+                                    <button class="contact__us--btn">Contact Us</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <footer class="footer__color">
+                <div class="container">
+                    <div class="row">
+                        <div class="link__wrapper">
+                            <div class="link">
+                                <h5 class="link__title">MAIN</h5>
+                                    <a href="" class="links">Blog</a>
+                                    <a href="" class="links">FAQS</a>
+                                    <a href="" class="links">Support</a>
+                                    <a href="" class="links">About Us</a>
+                            </div>
+                            <div class="link">
+                                <h5 class="link__title">PRODUCT</h5>
+                                    <a href="" class="links">Log In</a>
+                                    <a href="" class="links">Personal</a>
+                                    <a href="" class="links">Business</a>
+                                    <a href="" class="links">Team</a>
+                            </div>
+                            <div class="link">
+                                <h5 class="link__title">PRESS</h5>
+                                    <a href="" class="links">Logos</a>
+                                    <a href="" class="links">Events</a>
+                                    <a href="" class="links">Stories</a>
+                                    <a href="" class="links">Office</a>
+                            </div>
+                            <div class="link">
+                                <h5 class="link__title">TEAM</h5>
+                                    <a href="" class="links">Career</a>
+                                    <a href="" class="links">Founders</a>
+                                    <a href="" class="links">Culture</a>
+                                    <a href="" class="links">Onboarding</a>
+                            </div>
+                            <div class="link">
+                                <h5 class="link__title">LEGAL</h5>
+                                    <a href="" class="links">GDPR</a>
+                                    <a href="" class="links">Privacy Policy</a>
+                                    <a href="" class="links">Terms of Service</a>
+                                    <a href="" class="links">Disclaimer</a>
+                            </div>
+                        </div>
+                        <div class="footer__divider"></div>
+                        <div class="footer__info">
+                            <a href="#" class="logo__container">
+                                <img class="logo" src="https://treact.owaiskhan.me/static/media/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                                <p class="footer__title">Treact Inc.</p>
+                            </a>
+                            <p class="footer__para">
+                                <i class="fa-regular fa-copyright"></i> 2018 Treact Inc. All Rights Reserved.
+                            </p>
+                            <div class="social__logos">
+                                <figure class="social__logo">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </figure>
+                                <figure class="social__logo">
+                                    <i class="fa-brands fa-x-twitter"></i>
+                                </figure>
+                                <figure class="social__logo">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
     </main>
   </body>
 </html>
